force-app/main/default/objects/MUSW__Location__c/fields/MUSW__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>