force-app/main/default/objects/MUSW__Location__c/fields/MUSW__Location_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
                <default>true</default>
                <label>Site</label>
            </value>
            <value>
                <fullName>Municipal Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>