force-app/main/default/objects/MUSW__Location__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Location_Type__c</columns>
    <columns>MUSW__Description__c</columns>
    <columns>MUSW__Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>